Первые два блока steps

--- a/Interior Design/css/fonts.css
+++ b/Interior Design/css/fonts.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Spectral&display=swap");
+
 @font-face {
   font-family: 'Gilroy';
   src: url("../fonts/Gilroy-Light.eot");
