--- a/Interior Design/css/style.css
+++ b/Interior Design/css/style.css
@@ -79,7 +79,7 @@ button {
 
 .title__main {
   font-family: Spectral;
-  font-size: 45px;
+  font-size: 42px;
   line-height: 117%;
   text-align: center;
   padding-bottom: 30px;
@@ -390,9 +390,8 @@ h6 {
 }
 
 .option.active:before {
-  background: -o-linear-gradient(252.19deg, #DAB171 -6.32%, #F3DEAD -6.31%, #F4E6CB 36.24%, #D9BD89 78.81%);
-  background: linear-gradient(197.81deg, #DAB171 -6.32%, #F3DEAD -6.31%, #F4E6CB 36.24%, #D9BD89 78.81%);
-  border: 3px solid #F9F9F9;
+  background: #ffffff;
+  border: 3.5px solid #D9BD89;
   -webkit-box-shadow: 0px 0px 0px 1px #D9BD89;
           box-shadow: 0px 0px 0px 1px #D9BD89;
 }
@@ -1326,7 +1325,7 @@ h6 {
   text-transform: uppercase;
   color: #423A2A;
   font-weight: 300;
-  padding: 20px 50px 25px 50px;
+  padding: 18px 50px 18px 50px;
   font-size: calc(12px + 2 * ((100vw - 320px) / 1600));
   line-height: 16px;
   display: inline-block;
@@ -1770,7 +1769,6 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   padding-bottom: 45px;
-  margin: auto;
 }
 
 .controls-steps-top__name {
@@ -1841,14 +1839,12 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .content-steps-top__text {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 26%;
-          flex: 0 0 26%;
+      -ms-flex: 0 0 360px;
+          flex: 0 0 360px;
   padding-left: 30px;
 }
 
@@ -2110,6 +2106,12 @@ h6 {
   margin-bottom: 10px;
 }
 
+.right-content-steps-top__button span {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+}
+
 .steps__item {
   position: relative;
   padding-top: 0px;
@@ -2132,20 +2134,20 @@ h6 {
   z-index: 1;
 }
 
-.bg-steps-1 .main-content-steps-top__right {
-  background: url("../img/steps/cover1.jpg") center/contain no-repeat;
+.bg-steps-1 {
+  background: url("../img/steps/cover1.jpg") bottom/contain no-repeat;
 }
 
-.bg-steps-2 .main-content-steps-top__right {
-  background: url("../img/steps/cover2.jpg") center/contain no-repeat;
+.bg-steps-2 {
+  background: url("../img/steps/cover2.jpg") bottom/contain no-repeat;
 }
 
-.bg-steps-3 .main-content-steps-top__right {
-  background: url("../img/steps/cover3.jpg") center/contain no-repeat;
+.bg-steps-3 {
+  background: url("../img/steps/cover3.jpg") bottom/contain no-repeat;
 }
 
-.bg-steps-4 .main-content-steps-top__right {
-  background: url("../img/steps/cover4.jpg") center/contain no-repeat;
+.bg-steps-4 {
+  background: url("../img/steps/cover4.jpg") bottom/contain no-repeat;
 }
 
 .steps-middle {
@@ -2157,7 +2159,6 @@ h6 {
   position: relative;
   z-index: 5;
   padding: 70px 0px 60px 0px;
-  background: url("../img/steps/bg.jpg") center/cover no-repeat;
 }
 
 .steps-middle__title {
@@ -2288,100 +2289,62 @@ h6 {
 }
 
 .steps-bottom {
-  margin-top: 10%;
+  margin-top: 90px;
   width: 100%;
   position: relative;
   z-index: 5;
 }
 
-.steps-bottom__bg {
-  max-width: 100%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
 .steps-bottom__body {
   position: relative;
-  max-width: 990px;
-  padding-left: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.parallax {
-  position: absolute;
-  width: 100%;
+.steps-bottom__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.steps-bottom__img {
+  margin-top: -45px;
+}
+
+.steps-bottom__img img {
+  width: 120%;
   height: 100%;
-}
-
-.parallax img {
-  max-width: 100%;
-  margin: auto;
-}
-
-.steps-bottom__title {
-  text-align: left;
-}
-
-.steps-bottom__subtitle {
-  padding-bottom: 100px;
-  text-align: left;
-}
-
-.steps-bottom__subtitle sup {
-  font-size: calc(8px + 4 * ((100vw - 320px) / 1600));
+  margin-left: -20%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: right;
+     object-position: right;
 }
 
 .steps-bottom__content {
-  color: #ffffff;
-  max-width: 650px;
+  padding-left: 15px;
 }
 
-.content-steps-bottom__title {
-  display: block;
-  font-size: calc(16px + 12 * ((100vw - 320px) / 1600));
-  line-height: 32px;
-  text-transform: uppercase;
-  padding-bottom: 10px;
+.steps-bottom__title {
+  padding-bottom: 15px;
 }
 
-.content-steps-bottom__subtitle {
-  display: block;
-  font-size: calc(14px + 4 * ((100vw - 320px) / 1600));
-  line-height: 21px;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-  position: relative;
+.steps-bottom__subtitle {
+  padding-bottom: 40px;
 }
 
-.content-steps-bottom__subtitle:after {
-  content: '';
-  display: block;
-  bottom: 0;
-  left: 0;
-  width: 125px;
-  height: 1px;
-  position: absolute;
-  border: 0.4px solid #F3DEAD;
+.steps-bottom__ul li {
+  line-height: 120%;
 }
 
-.content-steps-bottom__description {
-  display: block;
-  padding-left: 20px;
-  padding-bottom: 200px;
-  position: relative;
-  font-size: calc(14px + 4 * ((100vw - 320px) / 1600));
-  line-height: 21px;
-}
-
-.content-steps-bottom__img {
-  position: absolute;
-  left: -47px;
-  top: -20px;
+.steps-bottom__button {
+  margin-top: 10px;
 }
 
 .price {
   background: #F9F9F9 url("../img/price/bg-price.png") center/cover no-repeat;
-  padding-top: 100px;
+  padding-top: 70px;
   padding-bottom: 50px;
 }
 
@@ -2396,7 +2359,7 @@ h6 {
 .controls-price__title {
   display: inline-block;
   padding-bottom: 20px;
-  font-family: Philosopher;
+  font-family: Spectral;
   font-size: calc(18px + 6 * ((100vw - 320px) / 1600));
   color: #373737;
 }
@@ -2476,9 +2439,9 @@ h6 {
   position: relative;
   width: 100%;
   max-width: 350px;
-  border: 0.5px solid #D9BD89;
-  background: #FFFFFF;
   margin: 10px 15px;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .price-item:before {
@@ -2498,14 +2461,25 @@ h6 {
   text-align: center;
   padding: 12% 15px 7% 15px;
   font-size: calc(14px + 6 * ((100vw - 320px) / 1600));
-  border-bottom: 0.5px solid #D9BD89;
+  background: #FFFFFF;
+  -webkit-box-shadow: 1px 1px 1px 1px #F4F4F4;
+          box-shadow: 1px 1px 1px 1px #F4F4F4;
 }
 
 .price-item__cost {
   text-align: center;
-  font-size: calc(16px + 16 * ((100vw - 320px) / 1600));
-  border-bottom: 0.5px solid #D9BD89;
+  font-size: 36px;
+  color: #A8905B;
+  background: transparent;
   padding: 8% 15px 8% 15px;
+  font-weight: 600;
+  line-height: 120%;
+}
+
+.price-item__cost span {
+  font-size: 22px;
+  line-height: 26px;
+  color: #A8905B;
 }
 
 .price-item__logo {
@@ -2514,6 +2488,7 @@ h6 {
 
 .price-item__service {
   color: #373737;
+  border-bottom: 0.5px solid #C2C2C2;
 }
 
 .price-item-service-content {
@@ -2521,23 +2496,42 @@ h6 {
 }
 
 .service-price__top {
-  padding: 7% 25px 4% 25px;
-  border-bottom: 0.5px solid #D9BD89;
+  padding-top: 15px;
   cursor: pointer;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: calc(16px + 2 * ((100vw - 320px) / 1600));
 }
 
 .service-price__logo {
   padding-bottom: 3%;
-  position: relative;
 }
 
-.service-price__logo:after,
-.service-price__logo:before {
+.service-price-logo__text {
+  font-size: 16px;
+  line-height: 120%;
+}
+
+.service-price__number {
+  font-size: 18px;
+  line-height: 21px;
+  position: relative;
+  padding-right: 20px;
+}
+
+.service-price__number:after,
+.service-price__number:before {
   content: '';
   width: 10px;
   height: 1px;
-  background-color: #D9BD89;
+  background-color: #313131;
   position: absolute;
   top: 50%;
   -webkit-transition: 0.3s;
@@ -2545,34 +2539,30 @@ h6 {
   transition: 0.3s;
 }
 
-.service-price__logo:before {
+.service-price__number:before {
   right: 8px;
   -webkit-transform: rotate(40deg) translateY(-100%);
       -ms-transform: rotate(40deg) translateY(-100%);
           transform: rotate(40deg) translateY(-100%);
 }
 
-.service-price__logo:after {
+.service-price__number:after {
   right: 0;
   -webkit-transform: rotate(-40deg) translateY(-100%);
       -ms-transform: rotate(-40deg) translateY(-100%);
           transform: rotate(-40deg) translateY(-100%);
 }
 
-.service-price-logo__text {
-  padding-left: 5px;
-}
-
 .service-price__li {
   font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
   line-height: 19px;
-  padding: 10px 20px 10px 25px;
-  border-bottom: 0.5px solid #D9BD89;
+  padding: 0px 0px 10px 15px;
 }
 
 .price-item__button {
   display: block;
   padding: 16px 10px 20px 10px;
+  margin-top: 30px;
   border-radius: 0px;
 }
 
@@ -4668,6 +4658,12 @@ h6 {
   color: #373737;
 }
 
+@media (min-width: 476.98px) {
+  .steps-middle__body {
+    background: url("../img/steps/bg.jpg") center/cover no-repeat;
+  }
+}
+
 @media (min-width: 576.98px) {
   .design-column__content-body {
     padding-bottom: 30px;
@@ -4737,17 +4733,19 @@ h6 {
     border-radius: 8px;
     position: absolute;
   }
+
+  .steps-bottom__title {
+    text-align: left;
+  }
+
+  .steps-bottom__subtitle {
+    text-align: left;
+  }
 }
 
 @media (max-width: 1620px) {
   .container {
     max-width: 1300px;
-  }
-}
-
-@media (max-width: 1600px) {
-  .content-steps-bottom__description {
-    padding-bottom: 250px;
   }
 }
 
@@ -4763,14 +4761,6 @@ h6 {
 
   .steps-bottom__body {
     padding-left: 0;
-  }
-
-  .steps-bottom__subtitle {
-    padding-bottom: 50px;
-  }
-
-  .content-steps-bottom__description {
-    padding-bottom: 350px;
   }
 
   .present-item-left {
@@ -4795,37 +4785,8 @@ h6 {
 }
 
 @media (max-width: 1230px) {
-  .steps-top__controls {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-
   .controls-steps-top__name {
     padding-bottom: 20px;
-  }
-
-  .controls-steps-top__li {
-    padding: 10px 30px;
-  }
-
-  .text-content-steps-top__ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-
-  .content-steps-top__main {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 100%;
-            flex: 1 1 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
   }
 }
 
@@ -4872,6 +4833,48 @@ h6 {
             flex: 0 1 100%;
   }
 
+  .steps-top__controls {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .content-steps-top {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .content-steps-top__text {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    padding-top: 20px;
+  }
+
+  .text-content-steps-top__ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .text-content-steps-top__li {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+    padding-right: 20px;
+  }
+
+  .content-steps-top__main {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
   .main-content-steps-top__body {
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -4879,24 +4882,24 @@ h6 {
             transform: translateX(-50%);
   }
 
+  .steps__item {
+    padding-left: 40px;
+  }
+
+  .steps__img {
+    left: 20px;
+    top: 0px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+
   .steps-middle {
     padding-top: 5%;
   }
 
-  .steps-middle__body {
-    width: 70%;
-  }
-
-  .steps-bottom__bg {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-
-  .content-steps-bottom__description {
-    padding-bottom: 450px;
-    padding-left: 40px;
+  .steps-bottom__button-group {
+    text-align: center;
   }
 }
 
@@ -5054,39 +5057,57 @@ h6 {
     line-height: 24px;
   }
 
+  .steps-top__subtitle {
+    padding-bottom: 50px;
+  }
+
   .controls-steps-top__name {
     margin-right: 0;
   }
 
   .controls-steps-top__li {
-    padding: 0 30px;
+    margin-right: 20px;
+    width: 162px;
   }
 
   .main-content-steps-top__body {
     width: 100%;
-    height: 405px;
+    height: 100%;
+  }
+
+  .ul-column_50 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    padding-right: 0;
+  }
+
+  .main-content-steps-top__right {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 235px;
+            flex: 0 0 235px;
+    padding: 40px 25px 50px 30px;
+    text-align: center;
+  }
+
+  .right-content-steps-top__description {
+    font-size: 14px;
   }
 
   .steps-middle__body {
     width: 100%;
   }
 
-  .steps-bottom__subtitle {
-    max-width: 520px;
-    padding-bottom: 40px;
+  .steps-bottom__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 40%;
+            flex: 0 1 40%;
   }
 
-  .content-steps-bottom__title {
-    line-height: 25px;
-  }
-
-  .content-steps-bottom__subtitle {
-    line-height: 18px;
-  }
-
-  .content-steps-bottom__description {
-    line-height: 18px;
-    padding-bottom: 400px;
+  .steps-bottom__content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 60%;
+            flex: 0 1 60%;
   }
 
   .price {
@@ -5359,8 +5380,34 @@ h6 {
     padding-bottom: 30px;
   }
 
+  .steps-top__controls {
+    padding-bottom: 20px;
+  }
+
   .controls-steps-top__name {
     display: none;
+  }
+
+  .controls-steps-top__ul {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .controls-steps-top__li {
+    margin: 0 10px 20px;
+  }
+
+  .controls-steps-top__li:last-child {
+    margin: 0 10px 20px;
+  }
+
+  .text-content-steps-top__li {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
   }
 
   .content-steps-top__text-ul li {
@@ -5384,8 +5431,24 @@ h6 {
     bottom: 0;
   }
 
-  .parallax {
-    bottom: 0;
+  .steps-bottom {
+    margin-top: 50px;
+  }
+
+  .steps-bottom__subtitle {
+    padding-bottom: 30px;
+  }
+
+  .steps-bottom__ul li {
+    line-height: 120%;
+  }
+
+  .steps-bottom__button {
+    padding: 20px 40px 20px 40px;
+  }
+
+  .steps-bottom__button span {
+    font-size: 16px;
   }
 
   .price-item {
@@ -5492,10 +5555,6 @@ h6 {
   .column_right {
     margin: 0;
     padding: 0;
-  }
-
-  .content-steps-bottom__description {
-    padding-bottom: 350px;
   }
 
   .controls-price__panel {
@@ -5655,8 +5714,8 @@ h6 {
     left: -40px;
   }
 
-  .steps-top__controls {
-    padding-bottom: 20px;
+  .steps-top {
+    padding-bottom: 15px;
   }
 
   .controls-steps-top__panel {
@@ -5668,31 +5727,46 @@ h6 {
     min-height: 45px;
   }
 
-  .controls-steps-top__li {
-    padding: 0 5px;
+  .content-steps-top__text {
+    padding: 10px 0px 0px 0px;
+  }
+
+  .text-content-steps-top__li {
+    padding-right: 0px;
+  }
+
+  .content-steps-top__main {
+    height: 664px;
   }
 
   .main-content-steps-top__body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding: 0px;
-    background: none !important;
   }
 
   .main-content-steps-top__left {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
-    height: 254px;
+    height: 374px;
     background: #FFFFFF;
     -webkit-box-shadow: 0px 4px 8px rgba(139, 139, 139, 0.31);
             box-shadow: 0px 4px 8px rgba(139, 139, 139, 0.31);
     border-radius: 8px;
+    margin: 0;
     padding: 20px;
   }
 
-  .steps-middle {
-    padding-top: 50%;
+  .main-content-steps-top__right {
+    background: none;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    padding: 20px;
+  }
+
+  .main-content-steps-top .main-content-steps-top__bg .main-content-steps-top__right {
+    background: #FFFFFF;
   }
 
   .steps-middle__title {
@@ -5707,17 +5781,43 @@ h6 {
     bottom: -10%;
   }
 
-  .content-steps-bottom__title {
-    line-height: 19px;
+  .steps-bottom {
+    margin-top: 40px;
   }
 
-  .content-steps-bottom__subtitle {
-    line-height: 16px;
+  .steps-bottom__body {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
-  .content-steps-bottom__description {
-    padding-bottom: 60%;
-    line-height: 16px;
+  .steps-bottom__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+
+  .steps-bottom__img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-top: 0px;
+  }
+
+  .steps-bottom__img img {
+    width: 100%;
+    margin-left: 0px;
+    -o-object-position: center;
+       object-position: center;
+  }
+
+  .steps-bottom__content {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
+  .steps-bottom__subtitle {
+    padding-bottom: 20px;
   }
 
   .price {
@@ -5977,11 +6077,35 @@ h6 {
   }
 }
 
+@media (max-width: 476.98px) {
+  .steps-middle__body {
+    padding: 0;
+  }
+
+  .steps-middle__content {
+    width: 100%;
+  }
+}
+
 @media (max-width: 450.98px) {
   .contacts {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
+  }
+}
+
+@media (max-width: 415px) {
+  .controls-steps-top__li {
+    font-size: 14px;
+    line-height: 17px;
+    width: 148px;
+    height: 36px;
+    margin: 5px 4px;
+  }
+
+  .controls-steps-top__li:last-child {
+    margin: 5px 4px;
   }
 }
 
@@ -6003,15 +6127,13 @@ h6 {
 
 .webp .why-project{ background: url(../img/why-project/bg.webp) center/cover no-repeat; }
 
-.webp .bg-steps-1 .main-content-steps-top__right{ background: url(../img/steps/cover1.webp) center/contain no-repeat; }
+.webp .bg-steps-1{ background: url(../img/steps/cover1.webp) bottom/contain no-repeat; }
 
-.webp .bg-steps-2 .main-content-steps-top__right{ background: url(../img/steps/cover2.webp) center/contain no-repeat; }
+.webp .bg-steps-2{ background: url(../img/steps/cover2.webp) bottom/contain no-repeat; }
 
-.webp .bg-steps-3 .main-content-steps-top__right{ background: url(../img/steps/cover3.webp) center/contain no-repeat; }
+.webp .bg-steps-3{ background: url(../img/steps/cover3.webp) bottom/contain no-repeat; }
 
-.webp .bg-steps-4 .main-content-steps-top__right{ background: url(../img/steps/cover4.webp) center/contain no-repeat; }
-
-.webp .steps-middle__body{ background: url(../img/steps/bg.webp) center/cover no-repeat; }
+.webp .bg-steps-4{ background: url(../img/steps/cover4.webp) bottom/contain no-repeat; }
 
 .webp .price{ background: #F9F9F9 url(../img/price/bg-price.webp) center/cover no-repeat; }
 
@@ -6032,6 +6154,11 @@ h6 {
 .webp .design:before{ background: url(../img/certificate-design/design-decor.webp) center/cover no-repeat; }
 
 .webp .video-inst{ background: #FCFCFC url(../img/slider-steps/slider-steps-bg.webp) left top 200px/contain no-repeat; }
+
+@media (min-width: 476.98px){
+
+  .webp .steps-middle__body{ background: url(../img/steps/bg.webp) center/cover no-repeat; }
+}
 
 @media (max-width: 1170px){
 
